--- a/Client/package.json
+++ b/Client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "react": "18.3.1",
     "react-native": "0.77.0",
+    "react-native-dotenv": "^3.4.11",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
