--- a/Client/package.json
+++ b/Client/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.17",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "react": "18.3.1",
