--- a/Client/package.json
+++ b/Client/package.json
@@ -10,11 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/checkbox": "^0.5.17",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "react": "18.3.1",
     "react-native": "0.77.0",
+    "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-dotenv": "^3.4.11",
     "react-redux": "^9.2.0"
   },
