--- a/Client/package.json
+++ b/Client/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.77.0",
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-dotenv": "^3.4.11",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
